# Private-LoRA-Lightning

./: .gitignore  Dockerfile  README.md  generate_from_model.py  pyproject.toml  requirements_build.txt  requirements_pip.txt  requirements_runtime.txt  train_lora.py
bash/: .bashrc
conf/: sample.json  sample_geration.json
lora_lightning/: arguments.py  logging.py
lora_lightning/datamodule/: base.py  osaka.py  utils.py
lora_lightning/models/: base.py  expert_model.py  get_optimizer.py  get_scheduler.py  utils.py
lora_lightning/models/lightning/: base.py  callbacks.py  expert_module.py  loggers.py
lora_lightning/models/modifier/: base.py  lora.py
shell/: build_image.sh  run_container.sh
tmp/: databricks-dolly-15k-ja-osaka.json
tmux/: .tmux.conf
vim/: plugin.toml  vimrc
