[project]
name = "lora_lightning"
version = "2024.11.26"
description = "LoRAをLightningで訓練するためのライブラリ"
authors = [
    { name = "h-hosoda-ml", email = "h.hosoda.ml@gmail.com" }
]
dependencies = [
    "transformers>=4.46.3",
    "datasets>=3.1.0",
    "lightning>=2.4.0",
    "tqdm>=4.67.1",
    "ipykernel>=6.29.5",
    "build>=1.2.2.post1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
packages = ["lora_lightning"]

[tool.hatch.build.targets.wheel]
packages = ["lora_lightning"]
